--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@ class="glyphicon glyphicon-arrow-down"></span></div><br>
   <hr>
   
   <footer class="container-fluid text-center">
-    <p>Online Store Copyright</p>  
-    <p>Autor: Marina Grbić</p> 
+    <p>Online Store</p>  
+    <p>Developed by Marina Grbić</p> 
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
